# intrinsic_aic_challenge

./: pixi.toml
aic_example_policies/aic_example_policies/ros/: RunDiffusion.py  RunFlowMatching.py  RunHeuristic.py  RunRlpd.py
aic_utils/aic_training/: README.md  aic_gym_env.py  diffusion_policy.py  env_resetter.py  example_training_loop.py  flow_matching.py  keypoint_model.py  keypoint_train.py  pyproject.toml  reset_env.sh  robot_vit.py  robot_vit_with_task.py  test_efficientformer.py  train_diffusion.py  train_diffusion_rot6d.py  train_flow_matching_approach_rot6d.py  train_flow_matching_rot6d.py  train_qsm_flow_matching.py  train_rlpd.py
aic_utils/lerobot_robot_aic/lerobot_robot_aic/: __init__.py  aic_robot_aic_controller.py  aic_teleop.py
docker/aic_model/: Dockerfile
docs/: getting_started.md
keypoint_model/: __init__.py  constants.py  dataset.py  model.py  train.py
