[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "aic-training"
version = "0.1.0"

[tool.setuptools.packages.find]
where = [".."]          # look in aic_utils/ (parent of this file)
include = ["aic_training*"]  # only package the aic_training directory
